--- a/styles.css
+++ b/styles.css
@@ -122,3 +122,23 @@ button:hover {
         width: 90%;
     }
 }
+
+
+
+
+    .iframe-container {
+        position: relative;
+        width: 100%;
+        padding-bottom: 56.25%; /* Proporção de aspecto 16:9. Ajuste conforme necessário */
+        height: 0;
+        overflow: hidden;
+    }
+    .iframe-container iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: none;
+    }
+
