--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,9 @@ h1 {
     padding: 5px 0;
     font-size: 0.9em;
     text-align: center;
-    font-family: Arial, sans-serif;
+    font-family: Arial, sans-serif;    
+    position: absolute;
+    top: 0px; left: 40px;
 }
 
 /* Botão de Play/Stop */
